<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/dashboard"
        android:checked="true"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/collection"
        android:checked="false"
        android:icon="@drawable/ic_collection"
        android:title="@string/menu_collections"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/order"
        android:checked="false"
        android:icon="@drawable/ic_order"
        android:title="@string/menu_order" />
    <item
        android:id="@+id/account"
        android:checked="false"
        android:icon="@drawable/ic_account"
        android:title="@string/menu_account"
        app:showAsAction="ifRoom" />

</menu>