<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/trans_grey_40"
        android:padding="@dimen/spacing_medium">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@id/ivClose"
            android:layout_toStartOf="@id/ivClose"
            android:text="@string/sort_catalogs_by"
            android:textColor="@color/black" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/ic_close_black_24dp" />
    </RelativeLayout>


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/spacing_large"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginRight="@dimen/spacing_large"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioNewArrivals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:padding="@dimen/spacing_small"
            android:text="@string/new_arrivals"
            android:textSize="@dimen/textsize_medium" />

        <RadioButton
            android:id="@+id/radioMostPopular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_small"
            android:text="@string/most_popular"
            android:textSize="@dimen/textsize_medium" />

        <RadioButton
            android:id="@+id/radioPriceLH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_small"
            android:text="@string/price_low_to_high"
            android:textSize="@dimen/textsize_medium" />

        <RadioButton
            android:id="@+id/radioPriceHL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_small"
            android:text="@string/price_high_to_low"
            android:textSize="@dimen/textsize_medium" />

        <RadioButton
            android:id="@+id/radioRatting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_small"
            android:text="@string/rating"
            android:textSize="@dimen/textsize_medium" />

    </RadioGroup>

</LinearLayout>