<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/white"

        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_small">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_small"
                android:text="@string/title_check_pincode_availability"
                android:textSize="@dimen/textsize_medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/spacing_xlarge"
                android:paddingTop="@dimen/spacing_xlarge">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_pincode1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7">

                    <EditText
                        android:id="@+id/etPincode"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/enter_pincode"
                        android:inputType="number"
                        android:maxLength="6" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnCheck"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@color/grey_40"
                    android:minHeight="@dimen/spacing_xxhuge"
                    android:text="@string/check"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>