<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/trans_grey_40"
        android:padding="@dimen/spacing_medium">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@id/ivClose"
            android:layout_toStartOf="@id/ivClose"
            android:text="@string/filter"
            android:textColor="@color/black" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/ic_close_black_24dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvButtons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvItems"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnReset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:background="@color/white"
            android:text="@string/btn_reset"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btnApplyChanges"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:background="@color/colorPrimary"
            android:text="@string/btn_apply_changes"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>